--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
 	"scripts": {
 		"dev": "pnpm -C playground dev",
 		"build": "pnpm -C packages/sileo-vue build",
-		"build:playground": "pnpm -C playground build"
+		"build:playground": "pnpm -C playground build",
+		"release": "bumpp -r"
 	},
 	"engines": {
 		"node": ">=18"
+	},
+	"devDependencies": {
+		"bumpp": "^10.4.1"
 	}
 }
