--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"name": "sileo-vue",
+  "version": "0.1.1",
+  "private": true,
 	"type": "module",
 	"scripts": {
 		"dev": "pnpm -C playground dev",
