chore(sileo-vue): 添加仓库信息到package.json
- 在package.json中新增repository字段
- 指定仓库类型为git
- 设置仓库URL为https://github.com/hooray/sileo-vue
- 明确包所在目录为packages/sileo-vue

--- a/packages/sileo-vue/package.json
+++ b/packages/sileo-vue/package.json
@@ -3,6 +3,11 @@
 	"version": "0.1.2",
 	"description": "An opinionated, physics based toast notification library for Vue 3. Port of sileo.",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/hooray/sileo-vue",
+		"directory": "packages/sileo-vue"
+	},
 	"type": "module",
 	"exports": {
 		".": {
